<resources>
    <string name="app_name">The Game Of Pig</string>
    <string name="roll">Roll</string>
    <string name="hold">Hold</string>
    <string name="reset">New Game</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player1_wins">Player 1 wins!</string>
    <string name="player2_wins">Player 2 wins!</string>
    <string name="player1_puntuacion">0</string>
    <string name="player2_puntuacion">0</string>
    <string name="current_score">Current Score</string>
    <string name="turn_score">0</string>
</resources>